--- a/app/design/frontend/base/default/template/points/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/base/default/template/points/wishlist/item/column/remove.phtml
@@ -39,4 +39,4 @@ $product = $item->getProduct();
     <?php endif; ?>
 <?php endif; ?>
 <a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
-    class="remove-text"><?php echo $this->__('Remove');?></a>
+    class="remove-text"><img src="/images/delete.png" /> <?php echo $this->__('Remove');?></a>
