--- a/app/design/frontend/default/default/layout/catalog.xml
+++ b/app/design/frontend/default/default/layout/catalog.xml
@@ -200,7 +200,7 @@ Product view
                     <label>Alert Urls</label>
                 </block>
 
-                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml"></block>
+                <block type="core/template" name="lily_customer_nav_block" as="lily_product_nav" template="page/html/lily_product_nav.phtml"></block>
 
                 <action method="setTierPriceTemplate"><template>catalog/product/view/tierprices.phtml</template></action>
 
