--- a/app/design/frontend/default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/view.phtml
@@ -32,7 +32,7 @@
  */
 ?>
     <div class="club_ecoupon_center cs-clear">
-        <?php echo $this->getChildHtml("lily_customer_nav")?>
+        <?php echo $this->getChildHtml("lily_product_nav")?>
         <div class="club_ecoupon_com club_point">
             <?php $_helper = $this->helper('catalog/output'); ?>
             <?php $_product = $this->getProduct(); ?>
