--- a/app/design/frontend/default/default/template/page/html/lily_customer_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_customer_nav.phtml
@@ -10,11 +10,11 @@
     </div>
     <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
     <div class="club_navlist">
-        <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("Account informations")?></a>
-        <a href="<?php echo $this->getUrl("sales/order/history/")?>"><?php echo $this->__("Gift history")?></a>
-        <a href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
-        <a href="<?php echo $this->getUrl("customer/account/point/")?>"><?php echo $this->__("Point informations")?></a>
-        <a href="<?php echo $this->getUrl("customer/account/ecoupon/")?>" class=""><?php echo $this->__("E-coupon")?></a>
+        <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("customer/account/edit/") ? "active": "" ?>" href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("Account informations")?></a>
+        <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("sales/order/history/") ? "active": "" ?>" href="<?php echo $this->getUrl("sales/order/history/")?>"><?php echo $this->__("Gift history")?></a>
+        <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("wishlist") ? "active": "" ?>"  href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
+        <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() == $this->getUrl("customer/account/point/") ? "active": "" ?>" href="<?php echo $this->getUrl("customer/account/point/")?>"><?php echo $this->__("Point informations")?></a>
+        <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() == $this->getUrl("customer/account/ecoupon/") ? "active": "" ?>" href="<?php echo $this->getUrl("customer/account/ecoupon/")?>" class=""><?php echo $this->__("E-coupon")?></a>
     </div>
     <div class="cs-clear">
         <!-- <a href="#" class="club_giftcardcheckout">CHECK OUT</a> -->
