--- a/app/design/frontend/base/default/template/checkout/cart.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart.phtml
@@ -48,7 +48,7 @@
     <?php echo $this->getChildHtml('form_before') ?>
     <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
         <fieldset>
-            <table id="shopping-cart-table" class="data-table cart-table">
+            <table id="shopping-cart-table" class="club_giftcardtable cart-table">
                 <col width="1" />
                 <col />
                 <col width="1" />
