--- a/app/design/frontend/default/iphone/template/checkout/cart.phtml
+++ b/app/design/frontend/default/iphone/template/checkout/cart.phtml
@@ -46,7 +46,7 @@
     <?php endif; ?>
     <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
         <fieldset>
-            <table id="shopping-cart-table" class="data-table cart-table">
+            <table id="shopping-cart-table" class="club_giftcardtable cart-table">
                 <tfoot>
                     <tr>
                         <td colspan="2" class="a-right">
