--- a/app/design/frontend/default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart.phtml
@@ -87,7 +87,7 @@
                 <tfoot>
                     <tr>
                         <td colspan="50" class="a-right">
-                            <?php if ($this->checkedInOneMonth()): ?>
+                            <?php if ($this->checkedInOneMonth() && FALSE): ?>
                                 <button type="button" title="<?php echo $this->__('Continue Exchange') ?>" class="button btn-continue" onclick="javascript:void(0)"><span><span style="coloe:#eee"><?php echo $this->__('Continue Exchange') ?></span></span></button>
                             <?php else: ?>
                                 <?php if($this->getContinueShoppingUrl()): ?>
