--- a/app/design/frontend/default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart.phtml
@@ -41,7 +41,7 @@
 <?php endif; ?>
 
 <div class="club_ecoupon_center cs-clear">
-<?php echo $this->getChildHtml("lily_customer_nav")?>
+<?php echo $this->getChildHtml("lily_product_nav")?>
     
 <div class="cart product-essential">
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
