--- a/app/design/frontend/base/default/template/points/shipping.phtml
+++ b/app/design/frontend/base/default/template/points/shipping.phtml
@@ -69,7 +69,7 @@
 		</div>
 		</div>
 		</div>
-		<?php */ ?>
+		<?php  ?>
 		<div class="content-wrapper shipping-method">
 <div class="content">
 	
